add more channels, add bottom padding to html body

--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body {
   font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
   color: #eee;
   margin: 0;
+  margin-bottom: 100px;
 }
 
 .info {
